tests/src/frontend/typechecking/invalid/tparams_pattern_tuple1.sk
fun shouldFail<T: (Int, Int), B: (T, Int)>(x: B): String {
  x match {
  | (_, (_, _)) -> "Fail\n"
  }
}
